[package]
name = "kms"
version = "0.3.1"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.curv]
package = "curv-kzen"
version = "0.7"
default-features = false

[dependencies.paillier]
git = "https://github.com/KZen-networks/rust-paillier"
tag = "v0.3.10"
default-features = false

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.3.12"
default-features = false

[dependencies.multi-party-schnorr]
git = "https://github.com/KZen-networks/multi-party-schnorr"
tag = "v0.4.5"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.4.6"
default-features = false

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.12"
default-features = false

[features]
default = ["curv/rust-gmp-kzen"]
