[package]
name = "kms"
version = "0.1.0"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>",
    "Oded Leiba <oded@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git" }