[package]
name = "kms"
version = "0.1.0"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>",
    "Oded Leiba <oded@kzencorp.com>"
]
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git" }
